# multi-agent-functions

./: .gitignore  README.md  agents.yaml  pyproject.toml
multi_agent_functions/: __main__.py
multi_agent_functions/google/calender/: agent.py  client.py  state.py  system_prompt.py  test.py  toolkit.py
multi_agent_functions/google/calender/model/: calender_list.py  events.py
multi_agent_functions/google/tasks/: agent.py  client.py  state.py  system_prompt.py  toolkit.py
multi_agent_functions/supervisor/: agent.py  state.py  system_prompt.py
multi_agent_functions/v1/: __main__.py
multi_agent_functions/v1/google/calender/: agent.py  client.py  state.py  system_prompt.py  test.py  toolkit.py
multi_agent_functions/v1/google/calender/model/: events.py
multi_agent_functions/v1/google/tasks/: agent.py  client.py  state.py  system_prompt.py  toolkit.py
multi_agent_functions/v1/google/tasks/model/: task.py  tasklist.py
multi_agent_functions/v1/llm/: rate_limited_model.py
multi_agent_functions/v1/supervisor/: agent.py  state.py  system_prompt.py
multi_agent_functions/v2/: supervisor_graph.py
multi_agent_functions/v2/agent/: base_agent.py  google_calendar_agent.py  google_tasks_agent.py  react_agent.py  state.py
